--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -947,7 +947,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt.model.vars[\"kqx.l1\"]._info()"
+    "opt.model.ref[\"kqx.l1\"]._info()"
    ]
   },
   {
